# garf

./: Cargo.toml  README.md  garf-49e36f4b2b3c1c1.js  garf-49e36f4b2b3c1c1_bg.wasm  garf-4f1dc6eac153a5b8.js  garf-4f1dc6eac153a5b8_bg.wasm  garf-5084c05e7247026b.js  garf-5084c05e7247026b_bg.wasm  garf-69e4f238d41ceb5c.js  garf-69e4f238d41ceb5c_bg.wasm  garf-7c99e8d875794be8.js  garf-7c99e8d875794be8_bg.wasm  garf-89937ca477944fd2.js  garf-89937ca477944fd2_bg.wasm  garf-bcd50e9a02576bf.js  garf-bcd50e9a02576bf_bg.wasm  index.html  style.css
.github/workflows/: continuous_deployment.yml
src/: lib.rs  main.rs
