[package]
name = "garf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
yew = "0.19"
reqwest = "0.11.12"
yew-hooks = "0.1.56"
web-sys = "0.3.60"
